--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://izaroot.github.io/project-2-frontend",
+  "homepage": "https://izaroot.github.io/beveragr",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
